Playing around with fonts

--- a/src/chap02.tex
+++ b/src/chap02.tex
@@ -1,8 +1,9 @@
 
 \section{One Section}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras est
-purus, egestas ac quam id, dapibus suscipit tellus. Sed quis tincidunt
+Lorem ipsum dolor \textbf{sit amet}, \textit{consectetur adipiscing \textbf{elit}.} 
+Cras est
+purus, \textsc{egestas ac quam id, dapibus suscipit} tellus. Sed quis tincidunt
 dolor. Donec efficitur rutrum tincidunt. Praesent convallis commodo
 nisi, tempus congue justo imperdiet id. Donec congue nulla fermentum
 ipsum commodo semper. Duis eget imperdiet felis. Aliquam scelerisque
@@ -10,12 +11,23 @@ efficitur sem nec faucibus. Duis molestie tortor in volutpat
 facilisis. Cras ligula dolor, aliquet ac turpis nec, aliquam
 ullamcorper nisl.
 
+\[
+  f(n) = \Big\{\begin{array}{c c}
+           n/2 & \text{, if $n$ is even} \\
+           3n + 1 & \text{otherwise}
+         \end{array}
+\]
+
 Sed libero sapien, consectetur quis magna in, tempor vehicula
 sapien. Suspendisse dignissim aliquam lobortis. Praesent vel felis ac
 nulla luctus varius suscipit nec ipsum. Duis purus mauris, lobortis
 sit amet placerat ut, tincidunt quis felis. Praesent efficitur ex
 dictum odio ornare vulputate. Sed eu felis eget ante aliquet
 interdum. Mauris at lobortis nisl.
+
+\[
+  \sum_{x=1}^{j} \sqrt{\frac{x + 1}{\mathcal{A}}}
+\]
 
 Pellentesque diam felis, vulputate quis dui vel, lacinia ultricies
 justo. Nunc sit amet mattis ligula, suscipit tempor orci. Donec
