Geometry magic going on

--- a/src/chap02.tex
+++ b/src/chap02.tex
@@ -66,3 +66,78 @@ lorem eu condimentum. Vestibulum ut hendrerit turpis, eu tincidunt
 ipsum. Aenean a consectetur risus. Donec dignissim molestie erat eu
 facilisis. Aliquam facilisis ullamcorper lectus a elementum. Vivamus
 eget justo quam.
+\subsection{With a subsection}
+Nullam mauris quam, pharetra eu nisl id, facilisis efficitur
+purus. Morbi sem dui, mollis in augue at, sodales pharetra nisl. Sed
+posuere lacus justo, ut dignissim eros varius sed. Nam facilisis
+condimentum turpis. Curabitur vel diam eget justo interdum vestibulum
+vitae ac turpis. Morbi eget condimentum diam. Etiam efficitur
+efficitur tincidunt. Maecenas pellentesque, risus quis pellentesque
+consequat, nisl nulla ornare lectus, nec accumsan nisi quam tincidunt
+arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+mattis, odio sit amet luctus hendrerit, velit nisl pulvinar turpis, id
+consectetur nisi massa in enim. Proin sodales pellentesque velit, id
+egestas nunc porttitor porttitor. Integer vel elit commodo neque
+vestibulum fringilla. Vivamus turpis urna, pharetra in venenatis at,
+mattis nec dolor. Vestibulum ante ipsum primis in faucibus orci luctus
+et ultrices posuere cubilia Curae; Donec nec diam neque. Phasellus id
+quam vel erat egestas pharetra.
+
+\paragraph{And a para.} Nulla ut dui eget dui scelerisque vulputate eget quis tortor. Nullam
+quis volutpat tortor. Ut euismod tortor at nunc scelerisque
+aliquet. In id ante sed magna ultrices posuere. Vestibulum ullamcorper
+mauris ligula, vitae faucibus neque placerat nec. Integer lobortis at
+lorem eu condimentum. Vestibulum ut hendrerit turpis, eu tincidunt
+ipsum. Aenean a consectetur risus. Donec dignissim molestie erat eu
+facilisis. Aliquam facilisis ullamcorper lectus a elementum. Vivamus
+eget justo quam.
+\subsection{With a subsection}
+Nullam mauris quam, pharetra eu nisl id, facilisis efficitur
+purus. Morbi sem dui, mollis in augue at, sodales pharetra nisl. Sed
+posuere lacus justo, ut dignissim eros varius sed. Nam facilisis
+condimentum turpis. Curabitur vel diam eget justo interdum vestibulum
+vitae ac turpis. Morbi eget condimentum diam. Etiam efficitur
+efficitur tincidunt. Maecenas pellentesque, risus quis pellentesque
+consequat, nisl nulla ornare lectus, nec accumsan nisi quam tincidunt
+arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+mattis, odio sit amet luctus hendrerit, velit nisl pulvinar turpis, id
+consectetur nisi massa in enim. Proin sodales pellentesque velit, id
+egestas nunc porttitor porttitor. Integer vel elit commodo neque
+vestibulum fringilla. Vivamus turpis urna, pharetra in venenatis at,
+mattis nec dolor. Vestibulum ante ipsum primis in faucibus orci luctus
+et ultrices posuere cubilia Curae; Donec nec diam neque. Phasellus id
+quam vel erat egestas pharetra.
+
+\paragraph{And a para.} Nulla ut dui eget dui scelerisque vulputate eget quis tortor. Nullam
+quis volutpat tortor. Ut euismod tortor at nunc scelerisque
+aliquet. In id ante sed magna ultrices posuere. Vestibulum ullamcorper
+mauris ligula, vitae faucibus neque placerat nec. Integer lobortis at
+lorem eu condimentum. Vestibulum ut hendrerit turpis, eu tincidunt
+ipsum. Aenean a consectetur risus. Donec dignissim molestie erat eu
+facilisis. Aliquam facilisis ullamcorper lectus a elementum. Vivamus
+eget justo quam.
+\subsection{With a subsection}
+Nullam mauris quam, pharetra eu nisl id, facilisis efficitur
+purus. Morbi sem dui, mollis in augue at, sodales pharetra nisl. Sed
+posuere lacus justo, ut dignissim eros varius sed. Nam facilisis
+condimentum turpis. Curabitur vel diam eget justo interdum vestibulum
+vitae ac turpis. Morbi eget condimentum diam. Etiam efficitur
+efficitur tincidunt. Maecenas pellentesque, risus quis pellentesque
+consequat, nisl nulla ornare lectus, nec accumsan nisi quam tincidunt
+arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+mattis, odio sit amet luctus hendrerit, velit nisl pulvinar turpis, id
+consectetur nisi massa in enim. Proin sodales pellentesque velit, id
+egestas nunc porttitor porttitor. Integer vel elit commodo neque
+vestibulum fringilla. Vivamus turpis urna, pharetra in venenatis at,
+mattis nec dolor. Vestibulum ante ipsum primis in faucibus orci luctus
+et ultrices posuere cubilia Curae; Donec nec diam neque. Phasellus id
+quam vel erat egestas pharetra.
+
+\paragraph{And a para.} Nulla ut dui eget dui scelerisque vulputate eget quis tortor. Nullam
+quis volutpat tortor. Ut euismod tortor at nunc scelerisque
+aliquet. In id ante sed magna ultrices posuere. Vestibulum ullamcorper
+mauris ligula, vitae faucibus neque placerat nec. Integer lobortis at
+lorem eu condimentum. Vestibulum ut hendrerit turpis, eu tincidunt
+ipsum. Aenean a consectetur risus. Donec dignissim molestie erat eu
+facilisis. Aliquam facilisis ullamcorper lectus a elementum. Vivamus
+eget justo quam.
